--- a/templates/layout.html
+++ b/templates/layout.html
@@ -20,7 +20,28 @@
 {% endblock %}
 </head>
 <body>
-	{% block content%}
-	{% endblock %}
+	<div class="container">
+		<header>
+			<div class="wrapper">
+				{% block header %}
+				<div class="navbar">
+					<div class="navbar-inner">
+						<ul class="nav">
+							<li><a href="/">Anasayfa</a></li>
+							<li><a href="/sektor-ekle/">Sektör Ekle</a></li>
+							<li><a href="/sirket-ekle/">Şirket Ekle</a></li>
+						</ul>
+						<form class="navbar-search pull-right">
+							<input type="text" class="search-query" placeholder="Ara">
+						</form>
+					</div>
+				</div>
+				{% endblock %}
+			</div>
+		</header>
+		{% block content%}
+		{% endblock %}
+	</div>
+	
 </body>
 </html>
