--- a/templates/layout.html
+++ b/templates/layout.html
@@ -28,19 +28,36 @@
 					<div class="navbar-inner">
 						<ul class="nav">
 							<li><a href="/">Anasayfa</a></li>
-							<li><a href="/sektor-ekle/">Sektör Ekle</a></li>
 							<li><a href="/sirket-ekle/">Şirket Ekle</a></li>
+							<li><a href="/sektorler/">Sektörler</a></li>
 						</ul>
-						<form class="navbar-search pull-right">
-							<input type="text" class="search-query" placeholder="Ara">
+						<a href="#lostpass" role="button" class="btn btn-success pull-right" style="margin-left:4px;" data-toggle="modal">Şifremi Unuttum!</a>
+						<form class="form-inline pull-right loginform">
+							<div class="input-prepend">
+								<span class="add-on"><i class="icon-user"></i></span>
+								<input class="input-small" type="text" placeholder="Kullanıcı Adı">
+							</div>
+							<div class="input-prepend">
+								<span class="add-on"><i class="icon-lock"></i></span>
+								<input class="input-small" type="password" placeholder="Şifre">
+							</div>
+							<button type="submit" class="btn btn-success">Giriş Yap</button>
 						</form>
 					</div>
 				</div>
 				{% endblock %}
 			</div>
 		</header>
+		
 		{% block content%}
 		{% endblock %}
+		<footer>
+			<div class="well well-small text-center">
+				{% block footer %}
+					<p>Copyright &copy; 2013</p>
+				{% endblock %}
+			</div>
+		</footer>
 	</div>
 	
 </body>
