--- a/templates/layout.html
+++ b/templates/layout.html
@@ -31,24 +31,17 @@
 							<li><a href="/sirket-ekle/">Şirket Ekle</a></li>
 							<li><a href="/sektorler/">Sektörler</a></li>
 						</ul>
-						<a href="#lostpass" role="button" class="btn btn-success pull-right" style="margin-left:4px;" data-toggle="modal">Şifremi Unuttum!</a>
-						<form class="form-inline pull-right loginform">
-							<div class="input-prepend">
-								<span class="add-on"><i class="icon-user"></i></span>
-								<input class="input-small" type="text" placeholder="Kullanıcı Adı">
-							</div>
-							<div class="input-prepend">
-								<span class="add-on"><i class="icon-lock"></i></span>
-								<input class="input-small" type="password" placeholder="Şifre">
-							</div>
-							<button type="submit" class="btn btn-success">Giriş Yap</button>
-						</form>
+						{% if user.is_authenticated %}
+							<a href="/logout/" class="btn btn-success pull-right">Çıkış Yap</a>
+						{% else %}
+							{% block loginform %}
+							{% endblock %}
+						{% endif %}
 					</div>
 				</div>
 				{% endblock %}
 			</div>
 		</header>
-		
 		{% block content%}
 		{% endblock %}
 		<footer>
