--- a/templates/web/index.html
+++ b/templates/web/index.html
@@ -2,50 +2,50 @@
 {% block title %}
 	Şartlarda anlaşabilirsek seve seve çalışırım hacı!
 {% endblock %}
+{% block loginform %}
+	<a href="#lostpass" role="button" class="btn btn-success pull-right" style="margin-left:4px;" data-toggle="modal">Şifremi Unuttum!</a>
+	<form action="/login/" method="post" class="form-inline pull-right loginform">{% csrf_token %}
+		{% for field in auth_form %}
+		<div class="input-prepend">
+			<span class="add-on"><i class="icon-{{ field.name }}"></i></span>
+			{{ field }}
+		</div>
+		{% endfor %}
+		<button type="submit" class="btn btn-success">Giriş Yap</button>
+	</form>
+{% endblock %}
 {% block content %}
 	<div class="row-fluid">
-		<div class="well text-center span6">
+		<div class="well text-center {% if user.is_authenticated %}span12{% else %}span6{% endif %}">
+			<blockquote>
 			<h2>Yol, yemek, sigorta varsa;</h2>
 			<p>"Arı gibi çalışırım hacı ama at gibi uyurum bak onu da açık söyliyim.."</p>
-			<br><br><br><br>
+			<br>
+			<p class="pull-right"><small>İsmail Abi</small></p>
+			<br>
+			<br>
+			<br>
+			</blockquote>
 		</div>
+		{% if not user.is_authenticated %}
 		<div class="span6 well">
 			<h2>Söyleyeceklerim var üye olayım:</h2>
-			<form>
-				<div class="row span12">
+			{% block signup %}
+			<form action="/signup/" method="post">{% csrf_token %}
+				{% for field in user_form %}
+				<div class="row span6" style="margin-left:0px;">
 					<div class="control-group">
-						<div class="input-prepend">
-							<span class="add-on"><i class="icon-user"></i></span>
-							<input class="input-large" type="text" placeholder="Kullanıcı Adı">
-						</div>
-					</div>
-					<div class="control-group">
-						<div class="input-prepend">
-							<span class="add-on"><i class="icon-envelope"></i></span>
-							<input class="input-large" type="text" placeholder="Email">
-						</div>
+						{{ field }}
 					</div>
 				</div>
-				<div class="row span12" style="margin-left:0px;">
-					<div class="control-group">
-						<div class="input-prepend">
-							<span class="add-on"><i class="icon-lock"></i></span>
-							<input class="input-large" type="password" placeholder="Şifre">
-						</div>
-					</div>
-					<div class="contol-group">
-						<div class="input-prepend">
-							<span class="add-on"><i class="icon-lock"></i></span>
-							<input class="input-large" type="password" placeholder="Şifre Tekrar">
-						</div>
-					</div>
-				</div>
-				
+				{% endfor %}
 				<div class="control-group">
 					<button type="submit" class="btn btn-success">Tamamdır!</button>
 				</div>
 			</form>
+			{% endblock %}
 		</div>
+		{% endif %}
 	</div>
 	<div class="well text-center">
 		<h2>Sigorta yapıyonuz mu sigorta?</h2>
