--- a/templates/web/index.html
+++ b/templates/web/index.html
@@ -3,7 +3,7 @@
 	Şartlarda anlaşabilirsek seve seve çalışırım hacı!
 {% endblock %}
 {% block loginform %}
-	<a href="#lostpass" role="button" class="btn btn-success pull-right" style="margin-left:4px;" data-toggle="modal">Şifremi Unuttum!</a>
+	<a href="#lostpass" role="button" class="btn btn-success pull-right" style="margin-left:4px;" data-toggle="modal" data-target="#lostpass">Şifremi Unuttum!</a>
 	<form action="/login/" method="post" class="form-inline pull-right loginform">{% csrf_token %}
 		{% for field in auth_form %}
 		<div class="input-prepend">
