--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,12 +14,34 @@
 {% endblock %}
 {% block jsblock %}
 <!--Scripts-->	
-	<script src="{{ MEDIA_URL }}/js/jquery-1.9.1.min.js" type="text/javascript"></script>
+	<script src="{{ MEDIA_URL }}/js/jquery-1.7.2.min.js" type="text/javascript"></script>
 	<script src="{{ MEDIA_URL }}/js/bootstrap.min.js" type="text/javascript"></script>
 <!--Scripts-->
 {% endblock %}
 </head>
 <body>
+	{% block lostpassmodal %}
+	<div id="lostpass" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+		<div class="modal-header">
+			<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+			<h3 id="myModalLabel">Şifremi unuttum!</h3>
+		</div>
+		<div class="modal-body">
+			<form class="form-horizontal">
+				<div class="control-group">
+				<label class="control-label" for="inputEmail">Email</label>
+				<div class="controls" style="margin:0 0 0 60px;">
+					<input type="text" id="inputEmail">
+				</div>
+				</div>
+			</form>
+		</div>
+		<div class="modal-footer">
+			<button class="btn btn-success">Gönder</button>
+			<button class="btn btn-danger" data-dismiss="modal" aria-hidden="true">Kapat</button>
+		</div>
+	</div>
+	{% endblock %}
 	<div class="container">
 		<header>
 			<div class="wrapper">
