Company Detail page

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -50,7 +50,7 @@
 					<div class="navbar-inner">
 						<ul class="nav">
 							<li><a href="/">Anasayfa</a></li>
-							<li><a href="/sirket-ekle/">Şirket Ekle</a></li>
+							<li><a href="/sirketler/">Şirketler</a></li>
 							<li><a href="/sektorler/">Sektörler</a></li>
 						</ul>
 						{% if user.is_authenticated %}
