--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@ span.time{float:right; color:#999; font-size:12px;}
 .control-group{float:left; margin:0 4px 0 0px;}
 .hero-unit{background:#f5f5f5; border:1px solid #e3e3e3;}
 .modal-body label{width:auto !important;}
-
+li span.sector{color:#999; font-size:12px;}
 
 
 
