--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,7 @@ span.time{float:right; color:#999; font-size:12px;}
 .hero-unit{background:#f5f5f5; border:1px solid #e3e3e3;}
 .modal-body label{width:auto !important;}
 li span.sector{color:#999; font-size:12px;}
+p span.sector{color:#999; font-size:12px;}
 
 
 
