--- a/templates/web/index.html
+++ b/templates/web/index.html
@@ -2,18 +2,7 @@
 {% block title %}
 	Şartlarda anlaşabilirsek seve seve çalışırım hacı!
 {% endblock %}
-{% block loginform %}
-	<a href="#lostpass" role="button" class="btn btn-success pull-right" style="margin-left:4px;" data-toggle="modal" data-target="#lostpass">Şifremi Unuttum!</a>
-	<form action="/login/" method="post" class="form-inline pull-right loginform">{% csrf_token %}
-		{% for field in auth_form %}
-		<div class="input-prepend">
-			<span class="add-on"><i class="icon-{{ field.name }}"></i></span>
-			{{ field }}
-		</div>
-		{% endfor %}
-		<button type="submit" class="btn btn-success">Giriş Yap</button>
-	</form>
-{% endblock %}
+
 {% block content %}
 	<div class="row-fluid">
 		<div class="well text-center {% if user.is_authenticated %}span12{% else %}span6{% endif %}">
@@ -49,10 +38,10 @@
 	</div>
 	<div class="well text-center">
 		<h2>Sigorta yapıyonuz mu sigorta?</h2>
-		<form class="form-search">
+		<form class="form-search" action="/search/" method="get">
 			<div class="input-prepend">
 				<span class="add-on"><i class="icon-search"></i></span>
-				<input type="text" class="input-xlarge" placeholder="Şirket ismi ile arama yap!">
+				<input type="text" class="input-xlarge" name="q" placeholder="Şirket ismi ile arama yap!">
 			</div>
 			<button type="submit" class="btn btn-success">Ara</button>
 		</form>
