--- a/templates/web/search.html
+++ b/templates/web/search.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="row-fluid">
 	<div class="well">
-		<h2>Arama Sonuçları</h2>
+		<h2>'{{ q }}' için Arama Sonuçları</h2>
 		{% for result in results %}
 		<div class="postWrapper">
 			<p><a href="/sirketler/{{ result.companyslug }}">{{ result.companyname }}</a> <span class="sector">({{ result.sector }})</span></p>
