--- a/templates/web/company.html
+++ b/templates/web/company.html
@@ -4,31 +4,34 @@
 {% endblock %}
 {% block content %}
 <div class="row-fluid">
-	<div class="well">
-		{% if posts %}
-			<h3>{{ company.companyname }} hakkında son yazılanlar</h3>
-			{% for row in posts %}
-			<div class="postWrapper">
-				<a class="avatar" href="{{ row.gravatar_url }}" target="_blank" title="{{ row.author.first_name }} {{ row.author.last_name }}">
-					{% if not row.gravatar_url %}
-					<img class="avatar" src="{{ MEDIA_URL }}/img/avatar.jpg">
-					{% else %}
-					<img class="avatar" src="{{ row.gravatar_url }}">
-					{% endif %}
-					
-				</a>
-				<span class="name">{{ row.author.first_name }} {{ row.author.last_name }}</span>
-				<span class="time">{{ row.timestamp }}</span>
-				<p><strong>{{ row.category }}: </strong>{{ row.content }}</p>
-			</div>
+	<div class="well span6">
+		<h3>{{ company.companyname }} <span></span></h3>
+		<table class="table">
+			<tbody>
+				<tr>
+					<td>Sektör</td>
+					<td><a href="/sektorler/{{ company.sector.sectorslug }}">{{ company.sector }}</a></td>
+				</tr>
+				<tr>
+					<td>Yorumlar</td>
+					<td>{{ posts.count }}</td>
+				</tr>
+			</tbody>
+		</table>
+		<h3>Sektördeki popüler şirketler</h3>
+		<table class="table">
+			<tbody>
+			{% for sectorCompany in sectorCompanies %}
+				{% if not sectorCompany == company %}
+				<tr>
+					<td>{{ sectorCompany.companyname }}</td>
+					<td></td>
+				</tr>
+				{% endif %}
 			{% endfor %}
-		{% else %}
-			<h3>{{ company.companyname }} hakkında hiç yorum yazılmamış.</h3>
-			<p>İlk yazan siz olun!</p>
-		{% endif %}
+			</tbody>
+		</table>
 	</div>
-</div>
-<div class="row-fluid">
 	<div class="well span6">
 		<h3>Söyleyeceklerim var!</h3>
 		{% if user.is_authenticated %}
@@ -48,8 +51,31 @@
 			<p>Sadece üyeler yorum ekleyebilir, <a href="/">üye olun</a> veya giriş yapın!</p>
 		{% endif %}
 	</div>
-	<div class="well span6">
-		
+</div>
+<div class="row-fluid">
+	<div class="well">
+		{% if posts %}
+			<h3>{{ company.companyname }} hakkında son yazılanlar</h3>
+			{% for post in posts %}
+			<div class="postWrapper">
+				<a class="avatar" href="{{ post.gravatar_url }}" target="_blank" title="{{ post.author.first_name }} {{ post.author.last_name }}">
+					{% if not post.gravatar_url %}
+					<img class="avatar" src="{{ MEDIA_URL }}/img/avatar.jpg">
+					{% else %}
+					<img class="avatar" src="{{ post.gravatar_url }}">
+					{% endif %}
+					
+				</a>
+				<span class="name">{{ post.author.first_name }} {{ post.author.last_name }}</span>
+				<span class="time">{{ post.timestamp }}</span>
+				<p><strong>{{ post.category }}: </strong>{{ post.content }}</p>
+			</div>
+			{% endfor %}
+		{% else %}
+			<h3>{{ company.companyname }} hakkında hiç yorum yazılmamış.</h3>
+			<p>İlk yazan siz olun!</p>
+		{% endif %}
 	</div>
 </div>
+
 {% endblock %}
