Forgot Password templates

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -57,7 +57,7 @@
 							<a href="/logout/" class="btn btn-success pull-right">Çıkış Yap</a>
 						{% else %}
 							{% block loginform %}
-							<a href="#lostpass" role="button" class="btn btn-success pull-right" style="margin-left:4px;" data-toggle="modal" data-target="#lostpass">Şifremi Unuttum!</a>
+							<a href="{% url 'password_reset' %}" role="button" class="btn btn-success pull-right" style="margin-left:4px;">Şifremi Unuttum!</a>
 							<form action="/login/" method="post" class="form-inline pull-right loginform">{% csrf_token %}
 								{% for field in auth_form %}
 								<div class="input-prepend">
