Auth Form Context_Propocessor & Email Template for pass reset

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,15 +7,15 @@
 <!--Metatags-->
 {% block cssblock %}
 <!--Styles-->
-	<link href="{{ MEDIA_URL }}/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-	<link href="{{ MEDIA_URL }}/css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css">
-	<link href="{{ MEDIA_URL }}/css/style.css" rel="stylesheet" type="text/css">
+	<link href="{{ MEDIA_URL }}css/bootstrap.min.css" rel="stylesheet" type="text/css">
+	<link href="{{ MEDIA_URL }}css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css">
+	<link href="{{ MEDIA_URL }}css/style.css" rel="stylesheet" type="text/css">
 <!--Styles-->
 {% endblock %}
 {% block jsblock %}
 <!--Scripts-->	
-	<script src="{{ MEDIA_URL }}/js/jquery-1.7.2.min.js" type="text/javascript"></script>
-	<script src="{{ MEDIA_URL }}/js/bootstrap.min.js" type="text/javascript"></script>
+	<script src="{{ MEDIA_URL }}js/jquery-1.7.2.min.js" type="text/javascript"></script>
+	<script src="{{ MEDIA_URL }}js/bootstrap.min.js" type="text/javascript"></script>
 <!--Scripts-->
 {% endblock %}
 </head>
