--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -7,32 +7,22 @@
     <div class="row-fluid">
         <div class="well">
             {% if validlink %}
-                <p>Please enter your new password twice.<br />
-                So we can verify you typed it in correctly.</p>
-                <form action="" method="post">
-                    <div style="display:none">
-                        <input type="hidden" value="{{ csrf_token }}" name="csrfmiddlewaretoken">
-                    </div>
-                    <table>
-                        <tr>
-                            <td>{{ form.new_password1.errors }}
-                                <label for="id_new_password1">New password:</label></td>
-                            <td>{{ form.new_password1 }}</td>
-                        </tr>
-                        <tr>
-                            <td>{{ form.new_password2.errors }}
-                                <label for="id_new_password2">Confirm password:</label></td>
-                            <td>{{ form.new_password2 }}</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td><input type="submit" value="Change my password" /></td>
-                        </tr>
-                    </table>
-                </form>
+            	<h2>Yeni Şifrenizi Belirleyin!</h2>
+                <p>Lütfen yeni şifrenizi 2 kez giriniz.</p>
+				<form action="" method="post">{% csrf_token %}
+					{{ form.new_password1.errors }}
+					<label>Yeni Şifreniz</label>
+					{{ form.new_password1 }}
+				
+					{{ form.new_password2.errors }}
+					<label>Şifreyi doğrula</label>
+					{{ form.new_password2 }}
+					<br>
+					<button type="submit" class="btn btn-success">Şifremi Değiştir</button>
+				</form>
             {% else %}
-                <h1>Password reset unsuccessful</h1>
-                <p>The password reset link was invalid, possibly because it has already been used. Please request a new password reset.</p>
+                <h2>Şifre doğrulama başarısız!</h2>
+                <p>Şifre yenileme linki geçersiz. Lütfen tekrar deneyiniz.</p>
             {% endif %}
         </div>
     </div>
