Added: Login with Google+

--- a/templates/web/index.html
+++ b/templates/web/index.html
@@ -32,6 +32,7 @@
 					<button type="submit" class="btn btn-success">Tamamdır!</button>
 				</div>
 			</form>
+			<a href="{% url 'googleplus_login' %}" class="btn btn-danger">Google+ ile Kaydol</a>
 			{% endblock %}
 		</div>
 		{% endif %}
